# QML-SpotifyAnalogue

./: README (eng_version).md  README.md
MusicPlayer/: AudioInfoBox.qml  CMakeLists.txt  ImageButton.qml  Main.qml  PlaylistPanel.qml  SearchField.qml  SearchPanel.qml  audioinfo.cpp  audioinfo.h  audiosearchmodel.cpp  audiosearchmodel.h  main.cpp  playercontroller.cpp  playercontroller.h  resources.qrc
